@@ -1,3 +1,8 @@
+2012-03-30  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/52754
+	* gcc.target/i386/pr52754.c: New testcase.
+
 2012-03-30  Richard Guenther <rguenther@suse.de>
 
 	PR middle-end/52772
